--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "chess.js": "^1.0.0-beta.6",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "vuedraggable": "^4.1.0"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
